app/about/styles/styles.module.css
@keyframes slide {
  to {
    transform: translate(calc(-50% - 2.5rem));
  }
}

@keyframes slideReverse {
  to {
    transform: translateX(calc(-50% + 2.5rem));
  }
}

.sliderContainer {
  width: 100%;
  overflow: hidden;
  mask: linear-gradient(
    to right,
    transparent 0%,
    black 20%,
    black 80%,
    transparent 100%
  );
}

.slider {
  width: max-content;
  animation: slide 40s linear infinite;
}

.slider:hover {
  animation-play-state: paused;
}

.slider2 {
  width: max-content;
  animation: slide 55s linear infinite;
}

.slider2:hover {
  animation-play-state: paused;
}

.slideReverse {
  width: max-content;
  animation: slideReverse 55s linear infinite reverse;
}

.slideReverse:hover {
  animation-play-state: paused;
}

